8199717: Avoid calculating primordial thread stack bounds on VM startup

Reviewed-by: dholmes, rehn, stuefe